# datanomad-review

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  action.yml  pyproject.toml
docs/: anti-patterns-catalog.md  billing-formats.md  methodology-flow.md  permissions.md  safety-patterns.md
docs/runbooks/: TEMPLATE.md  partition-bigquery-table.md
examples/: README.md
examples/sample-dbt-project/: dbt_project.yml
examples/sample-dbt-project/models/marts/: schema.yml
examples/sample-dbt-project/models/staging/: stg_orders.sql
framework/checklists/: ai_readiness.md  architecture.md  cost.md  governance.md  quality.md  scalability.md  security.md
src/datanomad_review/: __init__.py  cli.py  costguard.py  demo.py  plugins.py  scorecard.py  teardown.py
src/datanomad_review/billing/: __init__.py  diff.py  narrative.py  parse.py
src/datanomad_review/checks/: aws_cost.py  bigquery.py  dbt_project.py
src/datanomad_review/examples/sample-dbt-project/models/marts/: dim_customers.sql
src/datanomad_review/examples/sample-dbt-project/models/staging/: stg_customers.sql
src/datanomad_review/framework/: scorecard.yaml
tests/: test_billing_diff.py  test_billing_narrative.py  test_billing_parse.py  test_cli_new_commands.py  test_costguard.py  test_dbt_scan.py  test_demo.py  test_plugins.py  test_scorecard.py  test_teardown.py
tests/fixtures/: aws_ce.csv  aws_cur.csv  gcp_after.csv  gcp_before.csv  generic.csv  malformed.csv
