[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datanomad-review"
version = "0.1.0"
description = "Open framework + read-only scanners to review data platforms and cloud spend on GCP & AWS."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Felipe Veloso", email = "felipe.veloso@datanomadlab.com"}]
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]
keywords = ["finops", "data-engineering", "bigquery", "dbt", "aws", "cost-optimization", "data-platform", "dataops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://www.datanomadlab.com"
Repository = "https://github.com/datanomadlab/datanomad-review"

[project.optional-dependencies]
gcp = ["google-cloud-bigquery>=3.0"]
aws = ["boto3>=1.28"]
all = ["google-cloud-bigquery>=3.0", "boto3>=1.28"]
dev = ["pytest>=8.0"]

[project.scripts]
datanomad-review = "datanomad_review.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datanomad_review = ["framework/*.yaml"]
